save new shopping list to dynamoDB
